Changed compilation option for C (more permissive to hide warnings in flex/bison generated code) Changed Release compilation option: it is not set so it gets the default -O3

--- a/graphes/CMakeLists.txt
+++ b/graphes/CMakeLists.txt
@@ -3,7 +3,9 @@ project(grap)
 CMAKE_POLICY(SET CMP0015 NEW)
 
 set(CMAKE_CXX_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Wno-unused")
-set(CMAKE_C_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Wno-unused")
+
+# Less warnings in C in order to avoid warnings about flex/bison code
+set(CMAKE_C_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wno-return-type -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wundef -Wno-unused")
 
 set(CMAKE_CXX_FLAGS_VALGRIND " -g")
 set(CMAKE_C_FLAGS_VALGRIND " -g")
@@ -14,9 +16,9 @@ set(CMAKE_C_FLAGS_DEBUG " -g -fsanitize=address")
 set(CMAKE_CXX_FLAGS_ERRALL " -g -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused")
 set(CMAKE_C_FLAGS_ERRALL " -g -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused")
 
-# No optimization on "Release" (it induces bugs in the parser)
-set(CMAKE_CXX_FLAGS_RELEASE "")
-set(CMAKE_C_FLAGS_RELEASE "")
+# Default option for release is -O3
+#set(CMAKE_CXX_FLAGS_RELEASE "")
+#set(CMAKE_C_FLAGS_RELEASE "")
 
 # Force C++
 SET(CMAKE_C_COMPILER ${CMAKE_CXX_COMPILER})
