Adapted CMakeLists.txt to compile on windows

--- a/graphes/CMakeLists.txt
+++ b/graphes/CMakeLists.txt
@@ -2,70 +2,83 @@ cmake_minimum_required(VERSION 2.6)
 project(grap)
 CMAKE_POLICY(SET CMP0015 NEW)
 
-set(CMAKE_CXX_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Wno-unused")
+if(${MSVC})
+  set(CMAKE_EXE_LINKER_FLAGS "/STACK:1000000000")
+else()
+  set(CMAKE_CXX_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Wno-unused")
 
-# Less warnings in C in order to avoid warnings about flex/bison code
-set(CMAKE_C_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wno-return-type -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wundef -Wno-unused")
+  # Less warnings in C in order to avoid warnings about flex/bison code
+  set(CMAKE_C_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wno-return-type -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wundef -Wno-unused")
 
-set(CMAKE_CXX_FLAGS_VALGRIND " -g")
-set(CMAKE_C_FLAGS_VALGRIND " -g")
+  set(CMAKE_CXX_FLAGS_VALGRIND " -g")
+  set(CMAKE_C_FLAGS_VALGRIND " -g")
 
-set(CMAKE_CXX_FLAGS_DEBUG " -g -fsanitize=address")
-set(CMAKE_C_FLAGS_DEBUG " -g -fsanitize=address")
+  set(CMAKE_CXX_FLAGS_DEBUG " -g -fsanitize=address")
+  set(CMAKE_C_FLAGS_DEBUG " -g -fsanitize=address")
 
-set(CMAKE_CXX_FLAGS_ERRALL " -g -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused")
-set(CMAKE_C_FLAGS_ERRALL " -g -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused")
-
-# Default option for release is -O3
-#set(CMAKE_CXX_FLAGS_RELEASE "")
-#set(CMAKE_C_FLAGS_RELEASE "")
-
-# Force C++
-SET(CMAKE_C_COMPILER ${CMAKE_CXX_COMPILER})
+  set(CMAKE_CXX_FLAGS_ERRALL " -g -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused")
+  set(CMAKE_C_FLAGS_ERRALL " -g -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror -Wno-unused")
+endif()
 
 
 include_directories(
   ./
   libs/include/
   libs/libgraph/
+  libs/dotparser/
   libsGTSI/
   libsGTSI/Traversal/
-  libs/dotparser/
   libs/node_info/
 )
 
+# Dot parser
+# Create custom command for flex/lex
+if(${MSVC})
+  if (EXISTS Lexer.cpp AND EXISTS Parser.cpp)
+    message("Found Lexer.cpp and Parser.cpp.")
+  else()
+    message("Lexer.cpp or Parser.cpp not found: generate them with flex / bison (with make on Linux) then put them in the current directory.")
+  endif()
+else()
+  ADD_CUSTOM_COMMAND(
+    OUTPUT Lexer.c
+    OUTPUT Lexer.h
+    COMMAND flex
+    ARGS    libs/dotparser/Lexer.l
+    DEPENDS  libs/dotparser/Lexer.l
+  )
+
+  # Copy Lexer.c to Lexer.cpp (so it will be compiled as a C++ file)
+  ADD_CUSTOM_COMMAND(
+    OUTPUT Lexer.cpp
+    COMMAND cp
+    ARGS    Lexer.c Lexer.cpp
+    DEPENDS  Lexer.c
+  )
+
+  # Create custom command for bison/yacc
+  ADD_CUSTOM_COMMAND(
+    OUTPUT Parser.c
+    OUTPUT Parser.h
+    COMMAND bison
+    ARGS -y libs/dotparser/Parser.y
+    DEPENDS libs/dotparser/Parser.y
+  )
+
+  # Copy Parser.c to Parser.cpp (so it will be compiled as a C++ file)
+  ADD_CUSTOM_COMMAND(
+    OUTPUT Parser.cpp
+    COMMAND cp
+    ARGS    Parser.c Parser.cpp
+    DEPENDS  Parser.c
+  )
+endif()
+
+
+# Common types and functions (alloc_or_quit for instance)
 add_library(common libs/include/my_alloc.cpp)
 
-# Dot parser
-# Create target for the parser
-#ADD_CUSTOM_TARGET(simpledotparser echo "Creating dotparser")
-
-# Create custom command for flex/lex (note the outputs)
-ADD_CUSTOM_COMMAND(
-  OUTPUT Lexer.c
-  COMMAND flex
-  ARGS    libs/dotparser/Lexer.l
-  DEPENDS  libs/dotparser/Lexer.l
-)
-
-# Create custom command for bison/yacc (note the DEPENDS)
-ADD_CUSTOM_COMMAND(
-  OUTPUT Parser.c
-  COMMAND bison
-  ARGS -y libs/dotparser/Parser.y
-  DEPENDS Lexer.c
-  DEPENDS libs/dotparser/Parser.y
-)
-
-# Add parser.c to the list of sources
-# SET(Foo_SRCS ${Foo_SRCS} Parser.c)
-
-#add_library(libsimpledotparser 
-#			libs/dotparser/graphParser.c 
-#			Lexer.c 
-#			Parser.c 
-#			libs/dotparser/Expression.c
-#)
+# libgraph
 add_library(graph
   libs/include/my_alloc.cpp
   libs/libgraph/graph.hpp
@@ -80,16 +93,9 @@ add_library(graph
   libs/libgraph/nodeIO.cpp
   libs/dotparser/graphParser.cpp
   libs/dotparser/Expression.cpp
-  Parser.c
-  Lexer.c
+  Parser.cpp
+  Lexer.cpp
 )
-
-
-#add_executable(sdp libs/dotparser/main.c)
-
-#add_executable(sdp libs/dotparser/main.c libs/dotparser/graphParser.c Lexer.c Parser.c libs/dotparser/Expression.c)
-#target_link_libraries(graph libsimpledotparser)
-#target_link_libraries(sdp graph)
 
 # Node Info
 add_library(nodeinfo libs/node_info/node_info.cpp)
@@ -100,13 +106,17 @@ add_library(libGTSI
   libsGTSI/Traversal/Traversal.cpp
 )
 
-# grap (GTSI)
+# grap (GTSI-grap)
 add_executable(GTSI-grap GTSI-grap.cpp)
 target_link_libraries(GTSI-grap common libGTSI graph nodeinfo)
 
 # tests
 add_executable(tests tests.cpp)
-target_link_libraries(tests seccomp common libGTSI graph nodeinfo)
+if(${MSVC})
+  target_link_libraries(tests common libGTSI graph nodeinfo)
+else()
+  target_link_libraries(tests seccomp common libGTSI graph nodeinfo)
+endif()
 
 # todot
 add_executable(todot todot.cpp)
