Added compatibility fixes for Windows

--- a/graphes/CMakeLists.txt
+++ b/graphes/CMakeLists.txt
@@ -3,6 +3,10 @@ project(grap)
 CMAKE_POLICY(SET CMP0015 NEW)
 
 if(${MSVC})
+  # Don't include uinstd.h in Lexer.h
+  add_definitions(-DYY_NO_UNISTD_H)
+  
+  # Increase stack size
   set(CMAKE_EXE_LINKER_FLAGS "/STACK:1000000000")
 else()
   set(CMAKE_CXX_FLAGS " -std=c++11 -pedantic -Wall -Wno-write-strings -Wextra -Wcast-align -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Wno-unused")
