libs: nodeinfo - Split the cmake configuration for nodeinfo.
Signed-off-by: Jonathan Thieuleux <jonathan.thieuleux.external@cassidian.com>

--- a/graphes/CMakeLists.txt
+++ b/graphes/CMakeLists.txt
@@ -102,8 +102,8 @@ add_library(graph
   Lexer.cpp
 )
 
-# Node Info
-add_library(nodeinfo libs/node_info/node_info.cpp)
+# Libs
+add_subdirectory(libs)
 
 # GTSI
 add_subdirectory(libsGTSI)
