--- a/graphes/libs/dotparser/CMakeLists.txt
+++ b/graphes/libs/dotparser/CMakeLists.txt
@@ -13,6 +13,16 @@ else()
   find_package(BISON REQUIRED)
   find_package(FLEX REQUIRED)
 
+  if (BISON_FOUND)
+
+    # Creation of the Parser
+    BISON_TARGET(Parser
+      Parser.y
+      ${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp
+      DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/Parser.h
+      COMPILE_FLAGS "-y"
+      )
+
     if(FLEX_FOUND)
 
       # Creation of the Lexer
@@ -21,15 +31,6 @@ else()
 	${CMAKE_CURRENT_BINARY_DIR}/Lexer.cpp
 	COMPILE_FLAGS "--header-file=${CMAKE_CURRENT_BINARY_DIR}/Lexer.h"
 	)
-
-      if (BISON_FOUND)
-
-	# Creation of the Parser
-	BISON_TARGET(Parser
-	  Parser.y
-	  ${CMAKE_CURRENT_BINARY_DIR}/Parser.cpp
-	  COMPILE_FLAGS "-y --defines=${CMAKE_CURRENT_BINARY_DIR}Parser.h"
-	  )
 
       ADD_FLEX_BISON_DEPENDENCY(Scanner Parser)
     else()
