graphes: bindings - Creation of the bindings.
Signed-off-by: Jonathan Thieuleux <jonathan.thieuleux.external@cassidian.com>

--- a/graphes/libs/common/CMakeLists.txt
+++ b/graphes/libs/common/CMakeLists.txt
@@ -11,3 +11,9 @@ add_library(common-obj OBJECT ${SRCS_COMMON})
 
 # common types and functions (alloc_or_quit for instance)
 add_library(common $<TARGET_OBJECTS:common-obj>)
+
+# Bindings
+list_combinations(SRCS_COMMON_BINDING
+  PREFIXES ${CMAKE_CURRENT_SOURCE_DIR}/
+  SUFFIXES ${SRCS_COMMON})
+binding_add_srcs("${SRCS_COMMON_BINDING}")
