--- a/graphes/libs/libgraph/CMakeLists.txt
+++ b/graphes/libs/libgraph/CMakeLists.txt
@@ -14,3 +14,9 @@ set(SRCS_GRAPH
 
 # graph object-library
 add_library(graph-obj OBJECT ${SRCS_GRAPH})
+
+# Bindings
+list_combinations(SRCS_GRAPH_BINDING
+  PREFIXES ${CMAKE_CURRENT_SOURCE_DIR}/
+  SUFFIXES ${SRCS_GRAPH})
+binding_add_srcs("${SRCS_GRAPH_BINDING}")
