--- a/graphes/libs/node_info/CMakeLists.txt
+++ b/graphes/libs/node_info/CMakeLists.txt
@@ -6,3 +6,9 @@ set(SRCS_NODEINFO
 
 # nodeinfo library
 add_library(nodeinfo ${SRCS_NODEINFO})
+
+# Bindings
+list_combinations(SRCS_NODEINFO_BINDING
+  PREFIXES ${CMAKE_CURRENT_SOURCE_DIR}/
+  SUFFIXES ${SRCS_NODEINFO})
+binding_add_srcs("${SRCS_NODEINFO_BINDING}")
