--- a/graphes/libsGTSI/Traversal/CMakeLists.txt
+++ b/graphes/libsGTSI/Traversal/CMakeLists.txt
@@ -5,3 +5,9 @@ SET(SRCS_TRAVERSAL
 
 # Traversal object-library
 add_library(Traversal OBJECT ${SRCS_TRAVERSAL})
+
+# Bindings
+list_combinations(SRCS_TRAVERSAL_BINDING
+  PREFIXES ${CMAKE_CURRENT_SOURCE_DIR}/
+  SUFFIXES ${SRCS_TRAVERSAL})
+binding_add_srcs("${SRCS_TRAVERSAL_BINDING}")
