--- a/graphes/libs/dotparser/CMakeLists.txt
+++ b/graphes/libs/dotparser/CMakeLists.txt
@@ -39,7 +39,6 @@ else()
   else()
     message("[-] Bison issues")
   endif()
-
 endif()
 
 # sources
@@ -48,10 +47,22 @@ set(SRCS_DOTPARSER
   graphParser.hpp
   Expression.cpp
   Expression.hpp
+  )
+
+set(SRCS_BISON
   ${FLEX_Scanner_OUTPUTS}
   ${BISON_Parser_OUTPUTS}
   )
 
+
+# Bindings
+list_combinations(SRCS_DOTPARSER_BINDING
+  PREFIXES ${CMAKE_CURRENT_SOURCE_DIR}/
+  SUFFIXES ${SRCS_DOTPARSER})
+
+binding_add_srcs("${SRCS_DOTPARSER_BINDING}")
+binding_add_srcs("${SRCS_BISON}")
+
 # dotparser object-library
-add_library(dotparser-obj OBJECT ${SRCS_DOTPARSER} )
+add_library(dotparser-obj OBJECT ${SRCS_DOTPARSER} ${SRCS_BISON})
 
