binding: python - Changed the library name.
Signed-off-by: Jonathan Thieuleux <jonathan.thieuleux.external@cassidian.com>

--- a/graphes/bindings/python/CMakeLists.txt
+++ b/graphes/bindings/python/CMakeLists.txt
@@ -1,38 +1,43 @@
 # Variables-----------------------------------------------------------------
-set(SWIG_FILE libgraph.i)
-get_property(SRCS GLOBAL PROPERTY SRCS_BINDING)
+set(PYTHON_BINDING OFF CACHE BOOL "Python bindings")
 
-# message("${SRCS}")
+if(PYTHON_BINDING)  
 
-# SWIG
-FIND_PACKAGE(SWIG REQUIRED)
+  # Variables
+  set(SWIG_FILE pygrap.i)
+  get_property(SRCS GLOBAL PROPERTY SRCS_BINDING)
 
-if(SWIG_FOUND)
-  INCLUDE(${SWIG_USE_FILE})
+  # SWIG
+  FIND_PACKAGE(SWIG REQUIRED)
 
-  # Python
-  FIND_PACKAGE(PythonLibs)
+  if(SWIG_FOUND)
+    INCLUDE(${SWIG_USE_FILE})
 
-  if(PYTHONLIBS_FOUND)
+    # Python
+    FIND_PACKAGE(PythonLibs)
 
-    # Includes
-    INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
-    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-    
-    SET_SOURCE_FILES_PROPERTIES(${SWIG_FILE} PROPERTIES CPLUSPLUS ON)
-    SET_SOURCE_FILES_PROPERTIES(${SWIG_FILE} PROPERTIES SWIG_FLAGS "-builtin")
-    # Forcing the generation of the parser and lexer
-    SET_SOURCE_FILES_PROPERTIES(${SRCS} PROPERTIES GENERATED TRUE)
+    if(PYTHONLIBS_FOUND)
 
-    SWIG_ADD_MODULE(libgraph python ${SWIG_FILE} ${SRCS})
+      # Includes
+      INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
+      INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+      
+      SET_SOURCE_FILES_PROPERTIES(${SWIG_FILE} PROPERTIES CPLUSPLUS ON)
+      SET_SOURCE_FILES_PROPERTIES(${SWIG_FILE} PROPERTIES SWIG_FLAGS "-builtin")
+      # Forcing the generation of the parser and lexer
+      SET_SOURCE_FILES_PROPERTIES(${SRCS} PROPERTIES GENERATED TRUE)
 
-    # Removed warnings for the binding
-    SET_SOURCE_FILES_PROPERTIES(${SRCS} PROPERTIES COMPILE_FLAGS "-w")
-    SET_SOURCE_FILES_PROPERTIES(${swig_generated_file_fullname} PROPERTIES
-      COMPILE_FLAGS "-w"
-      GENERATED TRUE)
-        
-    SWIG_LINK_LIBRARIES(libgraph ${PYTHON_LIBRARIES})
-    
-  endif(PYTHONLIBS_FOUND)
-endif(SWIG_FOUND)
+      SWIG_ADD_MODULE(pygrap python ${SWIG_FILE} ${SRCS})
+
+      # Removed warnings for the binding
+      SET_SOURCE_FILES_PROPERTIES(${SRCS} PROPERTIES COMPILE_FLAGS "-w")
+      SET_SOURCE_FILES_PROPERTIES(${swig_generated_file_fullname} PROPERTIES
+	COMPILE_FLAGS "-w"
+	GENERATED TRUE)
+      
+      SWIG_LINK_LIBRARIES(pygrap ${PYTHON_LIBRARIES})
+      
+    endif(PYTHONLIBS_FOUND)
+  endif(SWIG_FOUND)
+  
+endif(PYTHON_BINDING)
