tools: tests - Fixed some MSYS issues.
Signed-off-by: Jonathan Thieuleux <jonathan.thieuleux.external@cassidian.com>

--- a/graphes/tools/tests/CMakeLists.txt
+++ b/graphes/tools/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SRCS_TESTS
 # tests
 add_executable(tests ${SRCS_TESTS})
 
-if(${MSVC})
+if("${MSVC}" OR "${MSYS}")
   target_link_libraries(tests common GTSI graph nodeinfo)
 else()
   target_link_libraries(tests seccomp common GTSI graph nodeinfo)
