node_info - Fixed some Boost issues.
Signed-off-by: Jonathan Thieuleux <jonathan.thieuleux.external@cassidian.com>

--- a/graphes/CMakeLists.txt
+++ b/graphes/CMakeLists.txt
@@ -45,6 +45,11 @@ else()
 
 endif()
 
+
+# Boost package
+set(Boost_USE_STATIC_LIBS ON)
+find_package(Boost REQUIRED COMPONENTS regex)
+
 include_directories(
   ./
   libs/common/
@@ -54,7 +59,8 @@ include_directories(
   libsGTSI/Traversal/
   libs/node_info/
   ${CMAKE_BINARY_DIR}/libs/dotparser/
-)
+  ${Boost_INCLUDE_DIR}
+  )
 
 # Libraries-----------------------------------------------------------------
 # Libs
