--- a/graphes/tools/tests/CMakeLists.txt
+++ b/graphes/tools/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SRCS_TESTS
 add_executable(tests ${SRCS_TESTS})
 
 if("${MSVC}" OR "${MSYS}")
-  target_link_libraries(tests common GTSI graph nodeinfo boost_regex)
+  target_link_libraries(tests common GTSI graph nodeinfo)
 else()
-  target_link_libraries(tests seccomp common GTSI graph nodeinfo boost_regex)
-endif()
+  target_link_libraries(tests seccomp common GTSI graph nodeinfo)
+endif()  
