--- a/graphes/bindings/python/CMakeLists.txt
+++ b/graphes/bindings/python/CMakeLists.txt
@@ -19,8 +19,8 @@ if(PYTHON_BINDING)
     INCLUDE(${SWIG_USE_FILE})
 
     # Python
-    FIND_PACKAGE(PythonLibs REQUIRED)
-    FIND_PACKAGE(PythonInterp REQUIRED)
+    FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
+    FIND_PACKAGE(PythonInterp 2.7 REQUIRED)
     
     if(PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
 
