make install installs GTSI-grap into /usr/local/bin

--- a/graphes/tools/GTSI-grap/CMakeLists.txt
+++ b/graphes/tools/GTSI-grap/CMakeLists.txt
@@ -7,3 +7,4 @@ set(SRCS_GTSIGRAP
 # grap (GTSI-grap)
 add_executable(GTSI-grap ${SRCS_GTSIGRAP})
 target_link_libraries(GTSI-grap common GTSI graph nodeinfo)
+install (TARGETS GTSI-grap DESTINATION /usr/local/bin) 
